[gd_scene load_steps=44 format=4 uid="uid://d2gmq1t76bcph"]

[ext_resource type="Script" uid="uid://dx5lf8xjc3v1o" path="res://scenes/maker/maker.gd" id="1_llvn3"]
[ext_resource type="Texture2D" uid="uid://bvs1t1omydjqo" path="res://sprites/option_selected.png" id="2_sfvha"]
[ext_resource type="Texture2D" uid="uid://dwawlnhyh5vj6" path="res://sprites/terrain.png" id="3_kjdq4"]
[ext_resource type="FontFile" uid="uid://cwbnydkueulh7" path="res://fonts/battle_city.otf" id="3_y3jvc"]
[ext_resource type="Script" uid="uid://doiawk6t1lsou" path="res://scenes/terrain/tile_map.gd" id="4_48tic"]
[ext_resource type="Script" uid="uid://bfeua3l2o05cc" path="res://scenes/maker/tile_block.gd" id="5_iu45a"]
[ext_resource type="Texture2D" uid="uid://cc3862r18228" path="res://sprites/base_eagle.png" id="5_kv6oy"]
[ext_resource type="PackedScene" uid="uid://dbsv6qbev1f1a" path="res://scenes/maker/save_level_window.tscn" id="6_5kyq4"]
[ext_resource type="PackedScene" uid="uid://co0ygwi05urpg" path="res://scenes/players/player_base.tscn" id="6_nmmdl"]
[ext_resource type="PackedScene" uid="uid://u11d7swkevpg" path="res://scenes/maker/level_saved_message.tscn" id="7_b4lpj"]
[ext_resource type="Texture2D" uid="uid://1krni5ns08dn" path="res://sprites/icon_left.png" id="7_kv6oy"]
[ext_resource type="Texture2D" uid="uid://c2qum1o3s6cj5" path="res://sprites/spawn_point.png" id="7_sfvha"]
[ext_resource type="PackedScene" uid="uid://bkh13hvw8pygp" path="res://scenes/maker/maker_cursor.tscn" id="8_biqfn"]

[sub_resource type="LabelSettings" id="LabelSettings_sfvha"]
font = ExtResource("3_y3jvc")
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kv6oy"]
font = ExtResource("3_y3jvc")
font_size = 8
font_color = Color(0.7294118, 0.23529412, 0.11764706, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu45a"]
atlas = ExtResource("3_kjdq4")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfvha"]
atlas = ExtResource("3_kjdq4")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv6oy"]
atlas = ExtResource("3_kjdq4")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvgvm"]
atlas = ExtResource("3_kjdq4")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e1vq"]
atlas = ExtResource("3_kjdq4")
region = Rect2(32, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwwp4"]
atlas = ExtResource("3_kjdq4")
region = Rect2(32, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_faxjo"]
atlas = ExtResource("3_kjdq4")
region = Rect2(16, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhx6m"]
atlas = ExtResource("3_kjdq4")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_re5af"]
atlas = ExtResource("3_kjdq4")
region = Rect2(16, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g5ui"]
atlas = ExtResource("3_kjdq4")
region = Rect2(24, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm1ry"]
atlas = ExtResource("3_kjdq4")
region = Rect2(0, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg4yi"]
atlas = ExtResource("3_kjdq4")
region = Rect2(8, 16, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_qvgvm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu45a")
}],
"loop": true,
"name": &"brick",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfvha")
}],
"loop": true,
"name": &"brick_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv6oy")
}],
"loop": true,
"name": &"brick_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvgvm")
}],
"loop": true,
"name": &"brick_3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e1vq")
}],
"loop": true,
"name": &"brick_4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwwp4")
}],
"loop": true,
"name": &"flower",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_faxjo")
}],
"loop": true,
"name": &"ice",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhx6m")
}],
"loop": true,
"name": &"metal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_re5af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g5ui")
}],
"loop": true,
"name": &"tree",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm1ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg4yi")
}],
"loop": true,
"name": &"water",
"speed": 2.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sfvha"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kv6oy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iu45a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qvgvm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jvaop"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jvaop"]
atlas = ExtResource("5_kv6oy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4e1vq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvaop")
}],
"loop": true,
"name": &"base",
"speed": 5.0
}]

[sub_resource type="TileMapPattern" id="TileMapPattern_mbbpy"]
tile_data = PackedInt32Array(0, 1, 0, 65536, 1, 0, 1, 1, 0, 65537, 1, 0)

[sub_resource type="TileMapPattern" id="TileMapPattern_ouxo3"]
tile_data = PackedInt32Array(0, 1, 1, 65536, 1, 1, 1, 1, 1, 65537, 1, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_icy5c"]
tile_data = PackedInt32Array(0, 131073, 2, 65536, 131073, 2, 1, 131073, 2, 65537, 131073, 2)

[sub_resource type="TileMapPattern" id="TileMapPattern_rmjfq"]
tile_data = PackedInt32Array(0, 262145, 2, 65536, 262145, 2, 1, 262145, 2, 65537, 262145, 2)

[sub_resource type="TileMapPattern" id="TileMapPattern_7pb6i"]
tile_data = PackedInt32Array(0, 131073, 1, 65536, 131073, 1, 1, 131073, 1, 65537, 131073, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_xfk5q"]
tile_data = PackedInt32Array(0, 1, 2, 65536, 1, 2, 1, 1, 2, 65537, 1, 2)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nsrm0"]
texture = ExtResource("3_kjdq4")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:0/0/custom_data_0 = "brick_full"
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -4, 4, -4, 4, 4, 0, 4)
1:0/0/custom_data_0 = "brick_right"
2:1/0 = 0
2:1/0/custom_data_0 = "ice"
4:2/0 = 0
4:2/0/z_index = 10
4:2/0/custom_data_0 = "grass"
4:1/0 = 0
4:1/0/physics_layer_3/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:1/0/custom_data_0 = "wall"
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 0, -4, 0, 4, -4, 4)
3:0/0/custom_data_0 = "brick_left"
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 0, 4, 0, 4, 4, -4, 4)
2:0/0/custom_data_0 = "brick_bottom"
0:1/0 = 0
0:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:1/0/custom_data_0 = "metal"
1:1/0 = 0
1:1/0/physics_layer_2/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:1/0/custom_data_0 = "frozen"
2:2/animation_columns = 2
2:2/animation_frame_0/duration = 1.0
2:2/animation_frame_1/duration = 1.0
2:2/0 = 0
2:2/0/z_index = 10
2:2/0/custom_data_0 = "grass"
0:2/animation_columns = 2
0:2/animation_speed = 2.0
0:2/animation_frame_0/duration = 1.0
0:2/animation_frame_1/duration = 1.0
0:2/0 = 0
0:2/0/physics_layer_2/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:2/0/custom_data_0 = "water"
3:1/0 = 0
3:1/0/physics_layer_3/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:1/0/custom_data_0 = "wall"
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 0, -4, 0)
4:0/0/custom_data_0 = "brick_top"

[sub_resource type="TileSet" id="TileSet_x42e6"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 56
physics_layer_1/collision_layer = 2
physics_layer_1/collision_mask = 56
physics_layer_2/collision_layer = 4
physics_layer_2/collision_mask = 24
physics_layer_3/collision_layer = 64
physics_layer_3/collision_mask = 56
custom_data_layer_0/name = "Type"
custom_data_layer_0/type = 4
sources/1 = SubResource("TileSetAtlasSource_nsrm0")
pattern_0 = SubResource("TileMapPattern_mbbpy")
pattern_1 = SubResource("TileMapPattern_ouxo3")
pattern_2 = SubResource("TileMapPattern_icy5c")
pattern_3 = SubResource("TileMapPattern_rmjfq")
pattern_4 = SubResource("TileMapPattern_7pb6i")
pattern_5 = SubResource("TileMapPattern_xfk5q")

[node name="Maker" type="Node2D"]
script = ExtResource("1_llvn3")

[node name="HUD" type="Node2D" parent="."]

[node name="interface_bg" type="ColorRect" parent="HUD"]
offset_right = 336.0
offset_bottom = 256.0
color = Color(0.2526042, 0.2526042, 0.2526042, 1)

[node name="OptionSelected" type="Sprite2D" parent="HUD"]
position = Vector2(28, 64)
scale = Vector2(2, 2)
texture = ExtResource("2_sfvha")

[node name="Block" type="Label" parent="HUD"]
offset_top = 32.0
offset_right = 56.0
offset_bottom = 51.0
text = "CURRENT BLOCK"
label_settings = SubResource("LabelSettings_sfvha")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Warning" type="Label" parent="HUD"]
visible = false
offset_top = 240.0
offset_right = 336.0
offset_bottom = 259.0
text = "IT IS NOT POSSIBLE TO MOVE THE BASE"
label_settings = SubResource("LabelSettings_kv6oy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TileBlock" type="AnimatedSprite2D" parent="HUD"]
position = Vector2(28, 64)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_qvgvm")
animation = &"brick"
script = ExtResource("5_iu45a")

[node name="IconButton" type="Button" parent="HUD/TileBlock"]
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_sfvha")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_kv6oy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iu45a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qvgvm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jvaop")
flat = true

[node name="Base" type="Label" parent="HUD"]
offset_left = 280.0
offset_top = 32.0
offset_right = 336.0
offset_bottom = 51.0
text = "PLAYER BASE"
label_settings = SubResource("LabelSettings_sfvha")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="PlayerBase" type="AnimatedSprite2D" parent="HUD"]
position = Vector2(308, 64)
sprite_frames = SubResource("SpriteFrames_4e1vq")
animation = &"base"

[node name="IconButton" type="Button" parent="HUD/PlayerBase"]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_sfvha")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_kv6oy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iu45a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qvgvm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jvaop")
flat = true

[node name="Base2" type="Label" parent="HUD"]
offset_top = 88.0
offset_right = 56.0
offset_bottom = 107.0
text = "MOVE SPAWNS"
label_settings = SubResource("LabelSettings_sfvha")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="SelectSpawns" type="Sprite2D" parent="HUD"]
position = Vector2(28, 120)
scale = Vector2(1.23, 1.23)
texture = ExtResource("7_kv6oy")

[node name="IconButton" type="Button" parent="HUD/SelectSpawns"]
offset_left = -6.504065
offset_top = -6.5040665
offset_right = 6.504066
offset_bottom = 6.5040665
theme_override_styles/normal = SubResource("StyleBoxEmpty_sfvha")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_kv6oy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iu45a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qvgvm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jvaop")
flat = true

[node name="SpawnBots" type="Label" parent="HUD"]
offset_top = 144.0
offset_right = 56.0
offset_bottom = 163.0
text = "SPAWN BOT"
label_settings = SubResource("LabelSettings_sfvha")
horizontal_alignment = 1
autowrap_mode = 3

[node name="HudBot" type="Node2D" parent="HUD"]
position = Vector2(0, 168)

[node name="Bot1" type="Label" parent="HUD/HudBot"]
offset_left = 8.0
offset_right = 32.0
offset_bottom = 16.0
text = "1-"
label_settings = SubResource("LabelSettings_sfvha")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotSpawn1" type="Sprite2D" parent="HUD/HudBot"]
modulate = Color(0.62, 1, 0.82266665, 1)
position = Vector2(40, 8)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="Bot2" type="Label" parent="HUD/HudBot"]
offset_left = 8.0
offset_top = 24.0
offset_right = 32.0
offset_bottom = 40.0
text = "2-"
label_settings = SubResource("LabelSettings_sfvha")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotSpawn2" type="Sprite2D" parent="HUD/HudBot"]
modulate = Color(0.5019608, 0.9843137, 1, 1)
position = Vector2(40, 32)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="Bot3" type="Label" parent="HUD/HudBot"]
offset_left = 8.0
offset_top = 48.0
offset_right = 32.0
offset_bottom = 64.0
text = "3-"
label_settings = SubResource("LabelSettings_sfvha")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotSpawn3" type="Sprite2D" parent="HUD/HudBot"]
modulate = Color(0.5019608, 0.6901961, 1, 1)
position = Vector2(40, 56)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="SpawnPlayers" type="Label" parent="HUD"]
offset_left = 280.0
offset_top = 96.0
offset_right = 336.0
offset_bottom = 115.0
text = "SPAWN PLAYER"
label_settings = SubResource("LabelSettings_sfvha")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HudPlayers" type="Node2D" parent="HUD"]
position = Vector2(280, 120)

[node name="Bot1" type="Label" parent="HUD/HudPlayers"]
offset_right = 32.0
offset_bottom = 16.0
text = "P1-"
label_settings = SubResource("LabelSettings_sfvha")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerSpawn1" type="Sprite2D" parent="HUD/HudPlayers"]
modulate = Color(1, 0.7529412, 0.078431375, 1)
position = Vector2(40, 8)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="Bot2" type="Label" parent="HUD/HudPlayers"]
offset_top = 24.0
offset_right = 32.0
offset_bottom = 40.0
text = "P2-"
label_settings = SubResource("LabelSettings_sfvha")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerSpawn2" type="Sprite2D" parent="HUD/HudPlayers"]
modulate = Color(0, 1, 0.34901962, 1)
position = Vector2(40, 32)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="Bot3" type="Label" parent="HUD/HudPlayers"]
offset_top = 48.0
offset_right = 32.0
offset_bottom = 64.0
text = "P3-"
label_settings = SubResource("LabelSettings_sfvha")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerSpawn3" type="Sprite2D" parent="HUD/HudPlayers"]
modulate = Color(0, 0.23529412, 1, 1)
position = Vector2(40, 56)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="Bot4" type="Label" parent="HUD/HudPlayers"]
offset_top = 72.0
offset_right = 32.0
offset_bottom = 88.0
text = "P4-"
label_settings = SubResource("LabelSettings_sfvha")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerSpawn4" type="Sprite2D" parent="HUD/HudPlayers"]
modulate = Color(0.7176471, 0, 1, 1)
position = Vector2(40, 80)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="game_bg" type="ColorRect" parent="."]
offset_left = 64.0
offset_top = 24.0
offset_right = 272.0
offset_bottom = 232.0
color = Color(0, 0, 0, 1)

[node name="Terrain" type="TileMapLayer" parent="." groups=["Terrain"]]
position = Vector2(0, 8)
tile_set = SubResource("TileSet_x42e6")
script = ExtResource("4_48tic")

[node name="Barrier" type="TileMapLayer" parent="." groups=["Terrain"]]
position = Vector2(0, 8)
tile_map_data = PackedByteArray("AAAIABwAAQAEAAEAAAAUABwAAQAEAAEAAAAXABwAAQAEAAEAAAAiAAMAAQAEAAEAAGAiABIAAQAEAAEAAGAiABMAAQAEAAEAAGAHAAIAAQAEAAEAAFAHAAMAAQAEAAEAAFAHAAQAAQAEAAEAAFAHAAUAAQAEAAEAAFAHAAYAAQAEAAEAAFAHAAcAAQAEAAEAAFAHAAgAAQAEAAEAAFAHAAkAAQAEAAEAAFAHAAoAAQAEAAEAAFAHAAsAAQAEAAEAAFAHAAwAAQAEAAEAAFAHAA0AAQAEAAEAAFAHAA4AAQAEAAEAAFAHAA8AAQAEAAEAAFAHABAAAQAEAAEAAFAHABEAAQAEAAEAAFAHABIAAQAEAAEAAFAHABMAAQAEAAEAAFAHABQAAQAEAAEAAFAHABUAAQAEAAEAAFAHABYAAQAEAAEAAFAHABcAAQAEAAEAAFAHABgAAQAEAAEAAFAHABkAAQAEAAEAAFAHABoAAQAEAAEAAFAHABsAAQAEAAEAAFAHABwAAQADAAEAAGAJABwAAQAEAAEAAAAKABwAAQAEAAEAAAALABwAAQAEAAEAAAAMABwAAQAEAAEAAAANABwAAQAEAAEAAAAOABwAAQAEAAEAAAAPABwAAQAEAAEAAAAQABwAAQAEAAEAAAARABwAAQAEAAEAAAASABwAAQAEAAEAAAATABwAAQAEAAEAAAAVABwAAQAEAAEAAAAWABwAAQAEAAEAAAAYABwAAQAEAAEAAAAZABwAAQAEAAEAAAAaABwAAQAEAAEAAAAbABwAAQAEAAEAAAAcABwAAQAEAAEAAAAdABwAAQAEAAEAAAAeABwAAQAEAAEAAAAfABwAAQAEAAEAAAAgABwAAQAEAAEAAAAhABwAAQAEAAEAAAAiAAQAAQAEAAEAAGAiAAUAAQAEAAEAAGAiAAYAAQAEAAEAAGAiAAcAAQAEAAEAAGAiAAgAAQAEAAEAAGAiAAkAAQAEAAEAAGAiAAoAAQAEAAEAAGAiAAsAAQAEAAEAAGAiAAwAAQAEAAEAAGAiAA0AAQAEAAEAAGAiAA4AAQAEAAEAAGAiAA8AAQAEAAEAAGAiABAAAQAEAAEAAGAiABEAAQAEAAEAAGAiABQAAQAEAAEAAGAiABUAAQAEAAEAAGAiABYAAQAEAAEAAGAiABcAAQAEAAEAAGAiABgAAQAEAAEAAGAiABkAAQAEAAEAAGAiABoAAQAEAAEAAGAiABsAAQAEAAEAAGAiABwAAQADAAEAADAHAAEAAQADAAEAAAAIAAEAAQAEAAEAAAAJAAEAAQAEAAEAAAAKAAEAAQAEAAEAAAALAAEAAQAEAAEAAAAMAAEAAQAEAAEAAAANAAEAAQAEAAEAAAAOAAEAAQAEAAEAAAAPAAEAAQAEAAEAAAAQAAEAAQAEAAEAAAARAAEAAQAEAAEAAAASAAEAAQAEAAEAAAATAAEAAQAEAAEAAAAUAAEAAQAEAAEAAAAVAAEAAQAEAAEAAAAWAAEAAQAEAAEAAAAXAAEAAQAEAAEAAAAYAAEAAQAEAAEAAAAZAAEAAQAEAAEAAAAaAAEAAQAEAAEAAAAbAAEAAQAEAAEAAAAcAAEAAQAEAAEAAAAdAAEAAQAEAAEAAAAeAAEAAQAEAAEAAAAfAAEAAQAEAAEAAAAgAAEAAQAEAAEAAAAiAAIAAQAEAAEAAGAiAAEAAQADAAEAAFAhAAEAAQAEAAEAAAA=")
tile_set = SubResource("TileSet_x42e6")
script = ExtResource("4_48tic")

[node name="Player Base" parent="." instance=ExtResource("6_nmmdl")]
visible = false
position = Vector2(168, 224)

[node name="Maker Cursor" parent="." instance=ExtResource("8_biqfn")]
z_index = 15
position = Vector2(168, 128)
animation = &"block"

[node name="Save Level Window" parent="." instance=ExtResource("6_5kyq4")]
visible = false

[node name="Level Saved Message" parent="." instance=ExtResource("7_b4lpj")]
visible = false
offset_top = 8.0
offset_bottom = 8.0

[node name="SaveMessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerSpawn" type="Node2D" parent="."]
z_index = 29

[node name="SpawnP1" type="Sprite2D" parent="PlayerSpawn"]
modulate = Color(1, 0.7529412, 0.078431375, 1)
position = Vector2(136, 224)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="SpawnP2" type="Sprite2D" parent="PlayerSpawn"]
modulate = Color(0, 1, 0.34901962, 1)
position = Vector2(200, 224)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="SpawnP3" type="Sprite2D" parent="PlayerSpawn"]
modulate = Color(0, 0.23529412, 1, 1)
position = Vector2(104, 224)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="SpawnP4" type="Sprite2D" parent="PlayerSpawn"]
modulate = Color(0.7176471, 0, 1, 1)
position = Vector2(232, 224)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="BotSpawn" type="Node2D" parent="."]
z_index = 29

[node name="BotSpawn1" type="Sprite2D" parent="BotSpawn"]
modulate = Color(0.62, 1, 0.82266665, 1)
position = Vector2(72, 32)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="BotSpawn2" type="Sprite2D" parent="BotSpawn"]
modulate = Color(0.5019608, 0.9843137, 1, 1)
position = Vector2(168, 32)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="BotSpawn3" type="Sprite2D" parent="BotSpawn"]
modulate = Color(0.5019608, 0.6901961, 1, 1)
position = Vector2(264, 32)
scale = Vector2(2, 2)
texture = ExtResource("7_sfvha")

[node name="WarningTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="SaveMessageTimer" to="." method="_on_save_message_timeout"]
[connection signal="timeout" from="WarningTimer" to="." method="_on_warning_timeout"]
